test/arrays/waynew/init2.good
init2.chpl:8: error: halt reached - array index out of bounds: (1)
